--- a/docs/notebook.ipynb
+++ b/docs/notebook.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example Notebook\n",
+    "# Example Notebook test1\n",
     "\n",
     "(Last updated: May 22, 2023)\n",
     "\n",
