--- a/docs/Arg 3.ipynb
+++ b/docs/Arg 3.ipynb
@@ -5,8 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Argument 3 (Working title)\n",
-    "\n",
+    "# Quality of water and life\n",
     "By continuing looking at the positives of the increase in industry we can see that the water quality is increasing in a lot of countries that see an increase in industry. Basic water facilities are one of the basics of hygiene and health.\n",
     "\n",
     "Looking at the figure it is clear to see that countries like China and India have seen a great improvement in water quality. A lot of countries near the ocean in Africa also see the improvement, going from terrible to pretty decent. This is thanks to the increase in infrastructure that is needed for the industry."
