Tekst updates, ik moet nog captions toevoegen aan alle grafieken maar daar ga ik nu mee aan de slag.

--- a/docs/Arg 2.ipynb
+++ b/docs/Arg 2.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "Another way to approach the growth of a country's industry is by looking at its total workforce. The more people work in a country the bigger its industry potentially is. A concern that has taken up a very prominent role in a lot of discussions nowadays is that of global warming. The overwhelming majority of scientist on Earth agree on the fact that humanity and their activity on this planet is in large part responsible for the rapid shift in global temperatures. This is mostly due to an increase of greenhouse gasses in the atmosphere caused mostly by intense industry and infrastructure. One of the most well-known and well-documented of these greenhouse gasses is CO2 or carbon dioxide, the gas that we and most living creatures produce by simply breathing.\n",
     "\n",
-    "CO2 makes up a large part of the total greenhouse gasses that humanity is releasing into the air alongside methane and other gasses. There are many sources from which the excess CO2 originates from, one of them allegedly being industry. The following figure presents the growth in total workforce in the United States of America and its production based CO2 emissions."
+    "So what does the data say about the relation between CO2 emissions and a country's total workforce?"
    ],
    "metadata": {
     "collapsed": false
@@ -2064,7 +2064,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This graph clearly shows that as the total labour force increased the production-based CO2 emissions in Russia the average total production-based CO2 emissions also crept up slightly. These graphs are at the very least very different from the ones concerning the US. A very simple explanation for this difference can be their differing industries. Whilst the US has a service driven, or primary, industry Russia has a more production, or secondary, driven industry. As could be expected the total emissions of a production heavy industry is a lot more significant than that of a service heavy industry due to the fact that the production of goods in big polluting factories is a much bigger polluter than computers could ever be."
+    "This graph clearly shows that as the total labour force increased the production-based CO2 emissions in Russia the average total production-based CO2 emissions also crept up slightly. These graphs are at the very least very different from the ones concerning the US. A very simple explanation for this difference can be their differing industries. Whilst the US has a service driven, or primary, industry Russia has a more production, or secondary, driven industry. As could be expected the total emissions of a production heavy industry is a lot more significant than that of a service heavy industry due to the fact that the production of goods in big polluting factories is a much bigger polluter than computers could ever be.\n",
+    "\n",
+    "So due to differing types of industries such as service based industries and production based industries it is difficult to draw any overarching conclusions between these two factors. Maybe a different relation will show itself by investigating different connections."
    ],
    "metadata": {
     "collapsed": false
