--- a/docs/Arg 3.ipynb
+++ b/docs/Arg 3.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# Quality of water and life\n",
-    "By continuing looking at the positives of the increasing industry we can see that the water quality is getting better in a lot of countries that see growth in ndustry. Basic water facilities are one of the basics of hygiene and health and therefore a good indicator of an increase in helath and hygene.\n",
+    "By continuing to look at the positives of the increasing industry we can see that the water quality is getting better in a lot of countries that see growth in industry. Basic water facilities are one of the basics of hygiene and health and are therefore a good indicator of an increase in health and hygiene.\n",
     "\n",
-    "Looking at the figure it is clear to see that countries like China and India, who have seen a massive growth in industry, have seen a great improvement in water quality. A lot of countries near the ocean in Africa also see the improvement, going from terrible to pretty decent. This is thanks to the increase in infrastructure that is needed to keep the industry increasing, as by products other facilities, like water qaulity also increase."
+    "Let's explore the data on these subjects and see what connections exist."
    ]
   },
   {
@@ -16532,7 +16532,7 @@
     "%store -r fig_basic\n",
     "%store -r fig_life\n",
     "\n",
-    "fig_basic.show()\n"
+    "fig_basic.show()"
    ]
   },
   {
@@ -16540,6 +16540,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What we can see is that countries like China and India, who have seen a massive growth in industry, have seen a great improvement in water quality as well. A lot of countries near the ocean in Africa also see the improvement, going from quite awful to pretty decent. This is thanks to the increase in infrastructure that is needed to keep the industry growing, and as a result other things, such as the quality of the water, also improve\n",
+    "\n",
     "It is important to note that all the countries in Europe have a national basic water quality of well over 90, with most big countries having a near perfect 99 score. Scores from 85 and up are considered okay."
    ]
   },
@@ -16548,7 +16550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another positive that comes with this is an increase in life expectancy, although life expectancy increases slowly over the years, it is clear that countries like India, Brazil, Russia and many countries in Africa have increased their life expectancy. This is all thanks to the growing world wide industry and connection of the world. Sanitation and health care becomes much more available thanks to the connection of countries."
+    "So with this we have found a positive connection between the water quality and the rise of industry, but maybe there's more that we can find as well. Let us explore another factory of life, life expectancy."
    ]
   },
   {
@@ -33912,16 +33914,15 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "We can clearly see an increase in total life expectancy and although life expectancy increases slowly over the years, it is clear that countries like India, Brazil, Russia and many countries in Africa have increased their life expectancy. This is all thanks to the growing worldwide industry and connection of the world. Sanitation and health care becomes much more available thanks to the connection of countries as well as due to an increase of availability of clean drinking water.\n",
+    "\n",
+    "So from this research it is easy to see that industry clearly has its ups, bringing better health and wealth to lots of countries. Next however..."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
