--- a/docs/Reflection.ipynb
+++ b/docs/Reflection.ipynb
@@ -4,8 +4,14 @@
    "cell_type": "markdown",
    "source": [
     "# Feedback from group / TA\n",
+    "#### Feedback van groepen J3, R4\n",
     "\n",
-    "1."
+    "1. Plots waren duidelijk /\n",
+    "2. Link naar repository voor met name preprocessing in de appendix.\n",
+    "3. Let op de hoeveelheid tekst.\n",
+    "4. Variabelen duidelijker aangeven, komt weer terug op tekst gebruiken als onderbouwing.\n",
+    "5. Caption met conclusie (fig.add_annotation()).\n",
+    "6. Parcats nog wat duidelijker maken vooral de onderbouwing en industrie duidelijker definiëren."
    ],
    "metadata": {
     "collapsed": false
