--- a/docs/testing data.ipynb
+++ b/docs/testing data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,17 +15,31 @@
     "inno = pd.read_csv('iso_inno.csv')\n",
     "infra = pd.read_csv('iso_infra.csv')\n",
     "MEI = pd.read_csv('iso_mei.csv')\n",
+    "import pandas as pd\n",
     "\n",
-    "columns_water = water.select_dtypes(include=['float'])\n",
-    "columns_inno = inno.select_dtypes(include=['float'])\n",
-    "columns_green = green.select_dtypes(include=['float'])\n",
-    "columns_infra = infra.select_dtypes(include=['float'])\n",
-    "columns_MEI = MEI.select_dtypes(include=['float'])"
+    "\n",
+    "columns_water = water.select_dtypes(include=['float', 'int'])\n",
+    "columns_water = pd.concat([columns_water, water['ISO3']], axis=1)\n",
+    "\n",
+    "columns_inno = inno.select_dtypes(include=['float', 'int'])\n",
+    "columns_inno = pd.concat([columns_inno, inno['ISO3']], axis=1)\n",
+    "columns_green = green.select_dtypes(include=['float', 'int'])\n",
+    "columns_green = pd.concat([columns_green, green['ISO3']], axis=1)\n",
+    "columns_infra = infra.select_dtypes(include=['float', 'int'])\n",
+    "columns_infra = pd.concat([columns_infra, infra['ISO3']], axis=1)\n",
+    "columns_MEI = MEI.select_dtypes(include=['float', 'int'])\n",
+    "columns_MEI = pd.concat([columns_MEI, MEI['ISO3']], axis=1)\n",
+    "\n",
+    "# columns_water = water.select_dtypes(include=['float'])\n",
+    "# columns_inno = inno.select_dtypes(include=['float'])\n",
+    "# columns_green = green.select_dtypes(include=['float'])\n",
+    "# columns_infra = infra.select_dtypes(include=['float'])\n",
+    "# columns_MEI = MEI.select_dtypes(include=['float'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3024,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3035,7 +3049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3057,7 +3071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4039,7 +4053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -5086,7 +5100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -5269,7 +5283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -5279,7 +5293,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_7871/4227105421.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mmerged_data2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Production of total industry sa, Index'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmerged_data2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Density of road (km per one hundred sq. km)'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_11695/4227105421.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mmerged_data2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Production of total industry sa, Index'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmerged_data2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Density of road (km per one hundred sq. km)'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'merged_data2' is not defined"
      ]
     }
@@ -5290,7 +5304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5299,7 +5313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5318,7 +5332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5329,7 +5343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21896,7 +21910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -23560,7 +23574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23578,7 +23592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -23629,7 +23643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -23690,7 +23704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -57636,7 +57650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -57677,7 +57691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
