--- a/docs/references.ipynb
+++ b/docs/references.ipynb
@@ -1,10 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "water: https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6465866/"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
