--- a/docs/Arg 3.ipynb
+++ b/docs/Arg 3.ipynb
@@ -33964,10 +33964,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can clearly see an increase in total life expectancy and although life expectancy increases slowly over the years, it is clear that countries like India, Brazil, Russia and many countries in Africa have increased their life expectancy. This is all thanks to the growing worldwide industry and connection of the world. Sanitation and health care becomes much more available thanks to the connection of countries as well as due to an increase of availability of clean drinking water.\n",
+    "We can clearly see an increase in total life expectancy and although life expectancy increases slowly over the years, it is clear that countries like India, Brazil, Russia and many countries in Africa have increased their life expectancy. This is all thanks to the growing worldwide industry and connection of the world [1]. Sanitation and health care becomes much more available thanks to the connection of countries as well as due to an increase of availability of clean drinking water.\n",
     "\n",
-    "So from this research it is easy to see that industry clearly has its ups, bringing better health and wealth to lots of countries. Next we will look at industry and GDP for developing countries in order to see how much wealth an increase of industry truly brings."
+    "So from this research it is easy to see that industry clearly has its ups, bringing better health and wealth to lots of countries. Next we will look at industry and GDP for developing countries in order to see how much wealth an increase of industry truly brings.\n",
+    "\n",
+    "[1] Luxon L. Infrastructure - the key to healthcare improvement. Future Hosp J. 2015 Feb;2(1):4-7. doi: 10.7861/futurehosp.2-1-4. PMID: 31098066; PMCID: PMC6465866."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
