Geupdate tekst en annotations

--- a/docs/Intro.ipynb
+++ b/docs/Intro.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Though as we know today, the effects of industry are not all fantastic. In recent years more and more concerns have been raised on the topic of global warming which has been on the rise ever since the conception of modern day industry. Apart from the explosive increase of greenhouse gasses such as CO2 and methane in the atmosphere caused by human activities such as industry there are also plenty of other pollutants that the environment has to deal with. By infecting the ground and water, pollutants threaten to destroy entire ecosystems and cause many species of plants and animals to go extinct.\n",
     "\n",
-    "People are starting to wake up more and more to the harsh reality of the irreversible life threatening effects of human industry. Yet, there are still plenty of people on Earth who turn a blind eye to these facts and claim that industry is something we must cherish as is. These two types of people clash often in the real world, but what are the facts? What does the data say about all this? What truly are the effects of industry on our world? By looking at data referring to  it might be possible to obtain an answer to these questions.\n"
+    "Regardless of public opinion, there are also those that cherish more conservative ideas on the topic of industry. On a basic level there are two different views people can take on, on the one hand there are people that are convinced that industry is something to be weary of, and on the other hand there are those that believe there is no problem with industry at all. These two types of people clash often in the real world, but what are the facts? What does the data say about all this? What truly are the effects of industry on our world? By looking at data referring to  it might be possible to obtain an answer to these questions.\n"
    ]
   },
   {
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-28T11:59:41.632674237Z",
-     "start_time": "2023-06-28T11:59:40.595004406Z"
-    },
     "tags": [
      "hide_cell"
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2023-06-29T19:32:31.351342238Z",
+     "start_time": "2023-06-29T19:32:29.883241384Z"
+    }
    },
    "outputs": [
     {
