--- a/docs/Intro.ipynb
+++ b/docs/Intro.ipynb
@@ -6,7 +6,28 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Group members\n",
+    "1. Surja Sarker\n",
+    "2. Ruben Veltman\n",
+    "3. Olivier Stam\n",
     "\n",
+    "## Group \n",
+    "R3"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The industrial revolution was exactly that, a revolution. A time in which our way of living was changed drastically through the automation of the production of many goods in bulk, the advancement of science and medicine, and the following growth in the quality of life itself for so many all over the world. The rise of industry brought a great deal of incredible things with skyrocketing the world into a global society connecting nearly everyone on Earth.\n",
     "\n",
     "Though as we know today, the effects of industry are not all fantastic. In recent years more and more concerns have been raised on the topic of global warming which has been on the rise ever since the conception of modern day industry. Apart from the explosive increase of greenhouse gasses such as CO2 and methane in the atmosphere caused by human activities such as industry there are also plenty of other pollutants that the environment has to deal with. By infecting the ground and water, pollutants threaten to destroy entire ecosystems and cause many species of plants and animals to go extinct.\n",
@@ -45,13 +66,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "tags": [
-     "hide_cell"
-    ],
     "ExecuteTime": {
      "end_time": "2023-06-29T19:32:31.351342238Z",
      "start_time": "2023-06-29T19:32:29.883241384Z"
-    }
+    },
+    "tags": [
+     "hide_cell"
+    ]
    },
    "outputs": [
     {
@@ -311,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dataset 4: iso_mei.csv\n",
+    "#### Dataset 5: iso_mei.csv\n",
     "\n",
     "Original link: https://stats.oecd.org/Index.aspx?DataSetCode=MEI_REAL\n",
     "\n",
@@ -330,6 +351,22 @@
    "source": [
     "pd.read_csv('iso_mei.csv').head(n=3)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Preprocessing code\n",
+    "For a more detailed analysis of how the datasets have been preprocessed please follow the link to the git repository:\n",
+    "https://github.com/olivierstam4/Informatievisualisatie/tree/main/docs/preprocess-research/Preprocess"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
