--- a/docs/Arg 4.ipynb
+++ b/docs/Arg 4.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8bce4abb",
    "metadata": {},
@@ -1123,6 +1124,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "411553b2",
    "metadata": {},
@@ -1140,17 +1142,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "(function() {\n",
-       "  // Find all code cells\n",
-       "  var codeCells = document.querySelectorAll('div.input');\n",
-       "\n",
-       "  // Hide code cells\n",
-       "  codeCells.forEach(function(cell) {\n",
-       "    cell.style.display = 'none';\n",
-       "  });\n",
-       "})();\n"
-      ],
+      "application/javascript": "(function() {\n  // Find all code cells\n  var codeCells = document.querySelectorAll('div.input');\n\n  // Hide code cells\n  codeCells.forEach(function(cell) {\n    cell.style.display = 'none';\n  });\n})();\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
