--- a/docs/Graphs Arg 4.ipynb
+++ b/docs/Graphs Arg 4.ipynb
@@ -1104,6 +1104,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b7e16126",
    "metadata": {},
@@ -2268,7 +2269,7 @@
     "            x=-0,\n",
     "            y=-0.20,\n",
     "            showarrow=False,\n",
-    "            text='Fig 4: This graph shows the progression of the average industrial production which is defined by OECD as the following: ',\n",
+    "            text='Fig 7: This graph shows the progression of the average industrial production which is defined by OECD as the following: ',\n",
     "            \n",
     "            xref='paper',\n",
     "            yref='paper',\n",
