--- a/docs/Work distribution.ipynb
+++ b/docs/Work distribution.ipynb
@@ -16,12 +16,14 @@
     "## Surja:\n",
     "1. Preprocessing the Green, Infra, Inno and MEI datasets\n",
     "2. Argument 4\n",
+    "3. Argument 5\n",
     "\n",
     "\n",
     "## Olivier:\n",
     "1. Preprocessing the Water dataset\n",
     "2. Argument 3\n",
-    "3. Managing the site"
+    "3. Managing the site\n",
+    "4. Argument 5"
    ]
   },
   {
